Refactor HTML and CSS for better readability

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 <title>Perfect PFP</title>
 
 <style>
-  * { box-sizing: border-box; }
+  * {
+    box-sizing: border-box;
+  }
 
   body {
     margin: 0;
     height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
     background: radial-gradient(circle at top, #1b1c2e, #0a0a12);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: system-ui, sans-serif;
     color: white;
   }
 
@@ -22,7 +24,7 @@
     width: 360px;
     padding: 28px;
     border-radius: 22px;
-    background: rgba(20,20,35,0.85);
+    background: rgba(20, 20, 35, 0.85);
     backdrop-filter: blur(14px);
     box-shadow: 0 30px 80px rgba(0,0,0,0.6);
     text-align: center;
@@ -31,6 +33,7 @@
   h1 {
     margin: 0 0 16px;
     font-size: 22px;
+    font-weight: 600;
   }
 
   .dropzone {
@@ -40,10 +43,12 @@
     cursor: pointer;
     margin-bottom: 20px;
     font-size: 14px;
+    transition: 0.25s;
   }
 
   .dropzone:hover {
     border-color: #7c7cff;
+    background: rgba(124,124,255,0.05);
   }
 
   .pfp {
@@ -71,11 +76,20 @@
     border-radius: 12px;
     padding: 12px 18px;
     font-size: 14px;
+    font-weight: 500;
     color: white;
     cursor: pointer;
+    transition: transform 0.15s, box-shadow 0.15s;
   }
 
-  input { display: none; }
+  button:hover {
+    transform: translateY(-1px);
+    box-shadow: 0 10px 25px rgba(124,124,255,0.35);
+  }
+
+  input {
+    display: none;
+  }
 </style>
 </head>
 
@@ -85,10 +99,11 @@
   <h1>Perfect PFP</h1>
 
   <div class="dropzone" id="dropzone">
-    Drag & drop an image<br>or click to upload
+    Drag & drop an image<br>
+    or click to upload
   </div>
 
-  <div class="pfp" id="preview">
+  <div class="pfp" id="pfpPreview">
     <img id="previewImg">
   </div>
 
@@ -97,100 +112,67 @@
 </div>
 
 <script>
-const dropzone = document.getElementById("dropzone");
-const fileInput = document.getElementById("fileInput");
-const preview = document.getElementById("preview");
-const previewImg = document.getElementById("previewImg");
-const downloadBtn = document.getElementById("downloadBtn");
+  const dropzone = document.getElementById("dropzone");
+  const fileInput = document.getElementById("fileInput");
+  const previewImg = document.getElementById("previewImg");
+  const pfpPreview = document.getElementById("pfpPreview");
+  const downloadBtn = document.getElementById("downloadBtn");
 
-dropzone.onclick = () => fileInput.click();
-dropzone.ondragover = e => e.preventDefault();
-dropzone.ondrop = e => {
-  e.preventDefault();
-  handleFile(e.dataTransfer.files[0]);
-};
-fileInput.onchange = () => handleFile(fileInput.files[0]);
+  dropzone.onclick = () => fileInput.click();
 
-function handleFile(file) {
-  if (!file || !file.type.startsWith("image")) return;
-  const reader = new FileReader();
-  reader.onload = () => {
-    previewImg.src = reader.result;
-    preview.style.display = "block";
-    downloadBtn.style.display = "inline-block";
+  dropzone.ondragover = e => e.preventDefault();
+
+  dropzone.ondrop = e => {
+    e.preventDefault();
+    handleFile(e.dataTransfer.files[0]);
   };
-  reader.readAsDataURL(file);
-}
 
-downloadBtn.onclick = () => {
-  const size = 512;
-  const canvas = document.createElement("canvas");
-  canvas.width = size;
-  canvas.height = size;
-  const ctx = canvas.getContext("2d");
+  fileInput.onchange = () => handleFile(fileInput.files[0]);
 
-  const img = previewImg;
-  const iw = img.naturalWidth;
-  const ih = img.naturalHeight;
+  function handleFile(file) {
+    if (!file || !file.type.startsWith("image")) return;
 
-  // square side
-  const s = Math.max(iw, ih);
-
-  // temp square canvas
-  const temp = document.createElement("canvas");
-  temp.width = s;
-  temp.height = s;
-  const tctx = temp.getContext("2d");
-
-  // center image
-  const dx = (s - iw) / 2;
-  const dy = (s - ih) / 2;
-  tctx.drawImage(img, dx, dy);
-
-  // extend edges vertically
-  if (ih < s) {
-    // top
-    tctx.drawImage(
-      img,
-      0, 0, iw, 1,
-      dx, 0, iw, dy
-    );
-    // bottom
-    tctx.drawImage(
-      img,
-      0, ih - 1, iw, 1,
-      dx, dy + ih, iw, dy
-    );
+    const reader = new FileReader();
+    reader.onload = () => {
+      previewImg.src = reader.result;
+      pfpPreview.style.display = "block";
+      downloadBtn.style.display = "inline-block";
+    };
+    reader.readAsDataURL(file);
   }
 
-  // extend edges horizontally
-  if (iw < s) {
-    // left
-    tctx.drawImage(
-      img,
-      0, 0, 1, ih,
-      0, dy, dx, ih
-    );
-    // right
-    tctx.drawImage(
-      img,
-      iw - 1, 0, 1, ih,
-      dx + iw, dy, dx, ih
-    );
-  }
+  // ✅ CORRECT 1×1 ZOOM LOGIC (FILL)
+  downloadBtn.onclick = () => {
+    const size = 512;
+    const canvas = document.createElement("canvas");
+    canvas.width = size;
+    canvas.height = size;
+    const ctx = canvas.getContext("2d");
 
-  // circular mask
-  ctx.beginPath();
-  ctx.arc(size/2, size/2, size/2, 0, Math.PI * 2);
-  ctx.clip();
+    const img = previewImg;
+    const iw = img.naturalWidth;
+    const ih = img.naturalHeight;
 
-  ctx.drawImage(temp, 0, 0, size, size);
+    // Scale so the shortest side fills the square
+    const scale = size / Math.min(iw, ih);
+    const sw = iw * scale;
+    const sh = ih * scale;
 
-  const link = document.createElement("a");
-  link.download = "pfp.png";
-  link.href = canvas.toDataURL("image/png");
-  link.click();
-};
+    const dx = (size - sw) / 2;
+    const dy = (size - sh) / 2;
+
+    // Circular mask
+    ctx.beginPath();
+    ctx.arc(size / 2, size / 2, size / 2, 0, Math.PI * 2);
+    ctx.clip();
+
+    ctx.drawImage(img, dx, dy, sw, sh);
+
+    const link = document.createElement("a");
+    link.download = "pfp.png";
+    link.href = canvas.toDataURL("image/png");
+    link.click();
+  };
 </script>
 
 </body>
